syntax = "proto3";
import "base.proto";

package helloworld.v1;
//    protoc -I . helloworld.proto --go_out=:.
option go_package="/api;helloproto";
service Greeter{
  rpc SayHello(HelloRequest) returns(HelloReply);
  rpc SayBase(Empty) returns(HelloReply);
}
message HelloRequest{
  string name =1;
}

message HelloReply{
  string message = 1; //1是编号不是值

}
